--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -250,6 +250,17 @@ h6 {
     text-decoration: none;
 }
 
+
+.main-content-detail .recipes-list-item {
+    max-width: 84rem;
+    margin: 0 auto;
+}
+
+.main-content-detail .recipes-list-item:hover {
+    transform: scale(1);
+    box-shadow: -5px 5px 15px rgba(0, 0, 0, .2);
+}
+
 .main-footer a:hover {
     filter: brightness(.8);
     transition: all 300ms ease-in-out;
